# tvdatafeed

./: .gitignore  flake.nix  main.py  pyproject.toml  requirements.txt  setup.py  x.ipynb
tvDatafeed/: datafeed.py  main.py
