[project]
name = "tvdatafeed"
version = "2.1.1"
description = "tvdatafeed modified by pasokata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.7",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "websocket-client>=1.8.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
